# Week2

./: .gitignore  README.md  pyproject.toml
data/processed/: analytics_table.parquet  run_meta.json
nootbooks/: eda.ipynb
reports/: summary.md
scripts/: run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py  run_etl.py
src/data_workflow/: config.py  etl.py  io.py  joins.py  quality.py  transforms.py  utils.py  viz.py
